sofa-platform/src/main/cpp/src/sofa.h

/* Astronomy/GeodeticGeocentric */
SOFAExport int  iauEform(int n, double *a, double *f);
SOFAExport int  iauGc2gd(int n, double xyz[3], double *elong, double *phi, double *height);
SOFAExport int  iauGc2gde(double a, double f, double xyz[3], double *elong, double *phi, double *height);
SOFAExport int  iauGd2gc(int n, double elong, double phi, double height, double xyz[3]);
SOFAExport int  iauGd2gce(double a, double f, double elong, double phi, double height, double xyz[3]);
/* Astronomy/Timescales */
SOFAExport int iauD2dtf(const char *scale, int ndp, double d1, double d2, int *iy, int *im, int *id, int ihmsf[4]);
SOFAExport int iauDat(int iy, int im, int id, double fd, double *deltat);
SOFAExport double iauDtdb(double date1, double date2, double ut, double elong, double u, double v);
SOFAExport int iauDtf2d(const char *scale, int iy, int im, int id, int ihr, int imn, double sec, double *d1, double *d2);
SOFAExport int iauTaitt(double tai1, double tai2, double *tt1, double *tt2);
SOFAExport int iauTaiut1(double tai1, double tai2, double dta, double *ut11, double *ut12);
SOFAExport int iauTaiutc(double tai1, double tai2, double *utc1, double *utc2);
SOFAExport int iauTcbtdb(double tcb1, double tcb2, double *tdb1, double *tdb2);
SOFAExport int iauTcgtt(double tcg1, double tcg2, double *tt1, double *tt2);
SOFAExport int iauTdbtcb(double tdb1, double tdb2, double *tcb1, double *tcb2);
SOFAExport int iauTdbtt(double tdb1, double tdb2, double dtr, double *tt1, double *tt2);
SOFAExport int iauTttai(double tt1, double tt2, double *tai1, double *tai2);
SOFAExport int iauTttcg(double tt1, double tt2, double *tcg1, double *tcg2);
SOFAExport int iauTttdb(double tt1, double tt2, double dtr, double *tdb1, double *tdb2);
SOFAExport int iauTtut1(double tt1, double tt2, double dt, double *ut11, double *ut12);
SOFAExport int iauUt1tai(double ut11, double ut12, double dta, double *tai1, double *tai2);
SOFAExport int iauUt1tt(double ut11, double ut12, double dt, double *tt1, double *tt2);
SOFAExport int iauUt1utc(double ut11, double ut12, double dut1, double *utc1, double *utc2);
SOFAExport int iauUtctai(double utc1, double utc2, double *tai1, double *tai2);
SOFAExport int iauUtcut1(double utc1, double utc2, double dut1, double *ut11, double *ut12);