sofa/src/main/java/be/angelcorp/sofa/SofaLibrary.java

	/**
	 * Astronomy/Geodetic/Geocentric<br>
	 * Original signature : <code>int iauEform(int, double*, double*)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:237</i>
	 */
	public static int iauEform(int n, Pointer<Double > a, Pointer<Double > f) {
		return iauEform(n, Pointer.getPeer(a), Pointer.getPeer(f));
	}
	protected native static int iauEform(int n, @Ptr long a, @Ptr long f);
	/**
	 * Original signature : <code>int iauGc2gd(int, double[3], double*, double*, double*)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:239</i>
	 */
	public static int iauGc2gd(int n, Pointer<Double > xyz, Pointer<Double > elong, Pointer<Double > phi, Pointer<Double > height) {
		return iauGc2gd(n, Pointer.getPeer(xyz), Pointer.getPeer(elong), Pointer.getPeer(phi), Pointer.getPeer(height));
	}
	protected native static int iauGc2gd(int n, @Ptr long xyz, @Ptr long elong, @Ptr long phi, @Ptr long height);
	/**
	 * Original signature : <code>int iauGc2gde(double, double, double[3], double*, double*, double*)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:241</i>
	 */
	public static int iauGc2gde(double a, double f, Pointer<Double > xyz, Pointer<Double > elong, Pointer<Double > phi, Pointer<Double > height) {
		return iauGc2gde(a, f, Pointer.getPeer(xyz), Pointer.getPeer(elong), Pointer.getPeer(phi), Pointer.getPeer(height));
	}
	protected native static int iauGc2gde(double a, double f, @Ptr long xyz, @Ptr long elong, @Ptr long phi, @Ptr long height);
	/**
	 * Original signature : <code>int iauGd2gc(int, double, double, double, double[3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:243</i>
	 */
	public static int iauGd2gc(int n, double elong, double phi, double height, Pointer<Double > xyz) {
		return iauGd2gc(n, elong, phi, height, Pointer.getPeer(xyz));
	}
	protected native static int iauGd2gc(int n, double elong, double phi, double height, @Ptr long xyz);
	/**
	 * Original signature : <code>int iauGd2gce(double, double, double, double, double, double[3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:245</i>
	 */
	public static int iauGd2gce(double a, double f, double elong, double phi, double height, Pointer<Double > xyz) {
		return iauGd2gce(a, f, elong, phi, height, Pointer.getPeer(xyz));
	}
	protected native static int iauGd2gce(double a, double f, double elong, double phi, double height, @Ptr long xyz);
	/**
	 * Astronomy/Timescales<br>
	 * Original signature : <code>int iauD2dtf(const char*, int, double, double, int*, int*, int*, int[4])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:250</i>
	 */
	public static int iauD2dtf(Pointer<Byte > scale, int ndp, double d1, double d2, Pointer<Integer > iy, Pointer<Integer > im, Pointer<Integer > id, Pointer<Integer > ihmsf) {
		return iauD2dtf(Pointer.getPeer(scale), ndp, d1, d2, Pointer.getPeer(iy), Pointer.getPeer(im), Pointer.getPeer(id), Pointer.getPeer(ihmsf));
	}
	protected native static int iauD2dtf(@Ptr long scale, int ndp, double d1, double d2, @Ptr long iy, @Ptr long im, @Ptr long id, @Ptr long ihmsf);
	/**
	 * Original signature : <code>int iauDat(int, int, int, double, double*)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:252</i>
	 */
	public static int iauDat(int iy, int im, int id, double fd, Pointer<Double > deltat) {
		return iauDat(iy, im, id, fd, Pointer.getPeer(deltat));
	}
	protected native static int iauDat(int iy, int im, int id, double fd, @Ptr long deltat);
	/**
	 * Original signature : <code>double iauDtdb(double, double, double, double, double, double)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:254</i>
	 */
	native public static double iauDtdb(double date1, double date2, double ut, double elong, double u, double v);
	/**
	 * Original signature : <code>int iauDtf2d(const char*, int, int, int, int, int, double, double*, double*)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:256</i>
	 */
	public static int iauDtf2d(Pointer<Byte > scale, int iy, int im, int id, int ihr, int imn, double sec, Pointer<Double > d1, Pointer<Double > d2) {
		return iauDtf2d(Pointer.getPeer(scale), iy, im, id, ihr, imn, sec, Pointer.getPeer(d1), Pointer.getPeer(d2));
	}
	protected native static int iauDtf2d(@Ptr long scale, int iy, int im, int id, int ihr, int imn, double sec, @Ptr long d1, @Ptr long d2);
	/**
	 * Original signature : <code>int iauTaitt(double, double, double*, double*)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:258</i>
	 */
	public static int iauTaitt(double tai1, double tai2, Pointer<Double > tt1, Pointer<Double > tt2) {
		return iauTaitt(tai1, tai2, Pointer.getPeer(tt1), Pointer.getPeer(tt2));
	}
	protected native static int iauTaitt(double tai1, double tai2, @Ptr long tt1, @Ptr long tt2);
	/**
	 * Original signature : <code>int iauTaiut1(double, double, double, double*, double*)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:260</i>
	 */
	public static int iauTaiut1(double tai1, double tai2, double dta, Pointer<Double > ut11, Pointer<Double > ut12) {
		return iauTaiut1(tai1, tai2, dta, Pointer.getPeer(ut11), Pointer.getPeer(ut12));
	}
	protected native static int iauTaiut1(double tai1, double tai2, double dta, @Ptr long ut11, @Ptr long ut12);
	/**
	 * Original signature : <code>int iauTaiutc(double, double, double*, double*)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:262</i>
	 */
	public static int iauTaiutc(double tai1, double tai2, Pointer<Double > utc1, Pointer<Double > utc2) {
		return iauTaiutc(tai1, tai2, Pointer.getPeer(utc1), Pointer.getPeer(utc2));
	}
	protected native static int iauTaiutc(double tai1, double tai2, @Ptr long utc1, @Ptr long utc2);
	/**
	 * Original signature : <code>int iauTcbtdb(double, double, double*, double*)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:264</i>
	 */
	public static int iauTcbtdb(double tcb1, double tcb2, Pointer<Double > tdb1, Pointer<Double > tdb2) {
		return iauTcbtdb(tcb1, tcb2, Pointer.getPeer(tdb1), Pointer.getPeer(tdb2));
	}
	protected native static int iauTcbtdb(double tcb1, double tcb2, @Ptr long tdb1, @Ptr long tdb2);
	/**
	 * Original signature : <code>int iauTcgtt(double, double, double*, double*)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:266</i>
	 */
	public static int iauTcgtt(double tcg1, double tcg2, Pointer<Double > tt1, Pointer<Double > tt2) {
		return iauTcgtt(tcg1, tcg2, Pointer.getPeer(tt1), Pointer.getPeer(tt2));
	}
	protected native static int iauTcgtt(double tcg1, double tcg2, @Ptr long tt1, @Ptr long tt2);
	/**
	 * Original signature : <code>int iauTdbtcb(double, double, double*, double*)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:268</i>
	 */
	public static int iauTdbtcb(double tdb1, double tdb2, Pointer<Double > tcb1, Pointer<Double > tcb2) {
		return iauTdbtcb(tdb1, tdb2, Pointer.getPeer(tcb1), Pointer.getPeer(tcb2));
	}
	protected native static int iauTdbtcb(double tdb1, double tdb2, @Ptr long tcb1, @Ptr long tcb2);
	/**
	 * Original signature : <code>int iauTdbtt(double, double, double, double*, double*)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:270</i>
	 */
	public static int iauTdbtt(double tdb1, double tdb2, double dtr, Pointer<Double > tt1, Pointer<Double > tt2) {
		return iauTdbtt(tdb1, tdb2, dtr, Pointer.getPeer(tt1), Pointer.getPeer(tt2));
	}
	protected native static int iauTdbtt(double tdb1, double tdb2, double dtr, @Ptr long tt1, @Ptr long tt2);
	/**
	 * Original signature : <code>int iauTttai(double, double, double*, double*)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:272</i>
	 */
	public static int iauTttai(double tt1, double tt2, Pointer<Double > tai1, Pointer<Double > tai2) {
		return iauTttai(tt1, tt2, Pointer.getPeer(tai1), Pointer.getPeer(tai2));
	}
	protected native static int iauTttai(double tt1, double tt2, @Ptr long tai1, @Ptr long tai2);
	/**
	 * Original signature : <code>int iauTttcg(double, double, double*, double*)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:274</i>
	 */
	public static int iauTttcg(double tt1, double tt2, Pointer<Double > tcg1, Pointer<Double > tcg2) {
		return iauTttcg(tt1, tt2, Pointer.getPeer(tcg1), Pointer.getPeer(tcg2));
	}
	protected native static int iauTttcg(double tt1, double tt2, @Ptr long tcg1, @Ptr long tcg2);
	/**
	 * Original signature : <code>int iauTttdb(double, double, double, double*, double*)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:276</i>
	 */
	public static int iauTttdb(double tt1, double tt2, double dtr, Pointer<Double > tdb1, Pointer<Double > tdb2) {
		return iauTttdb(tt1, tt2, dtr, Pointer.getPeer(tdb1), Pointer.getPeer(tdb2));
	}
	protected native static int iauTttdb(double tt1, double tt2, double dtr, @Ptr long tdb1, @Ptr long tdb2);
	/**
	 * Original signature : <code>int iauTtut1(double, double, double, double*, double*)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:278</i>
	 */
	public static int iauTtut1(double tt1, double tt2, double dt, Pointer<Double > ut11, Pointer<Double > ut12) {
		return iauTtut1(tt1, tt2, dt, Pointer.getPeer(ut11), Pointer.getPeer(ut12));
	}
	protected native static int iauTtut1(double tt1, double tt2, double dt, @Ptr long ut11, @Ptr long ut12);
	/**
	 * Original signature : <code>int iauUt1tai(double, double, double, double*, double*)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:280</i>
	 */
	public static int iauUt1tai(double ut11, double ut12, double dta, Pointer<Double > tai1, Pointer<Double > tai2) {
		return iauUt1tai(ut11, ut12, dta, Pointer.getPeer(tai1), Pointer.getPeer(tai2));
	}
	protected native static int iauUt1tai(double ut11, double ut12, double dta, @Ptr long tai1, @Ptr long tai2);
	/**
	 * Original signature : <code>int iauUt1tt(double, double, double, double*, double*)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:282</i>
	 */
	public static int iauUt1tt(double ut11, double ut12, double dt, Pointer<Double > tt1, Pointer<Double > tt2) {
		return iauUt1tt(ut11, ut12, dt, Pointer.getPeer(tt1), Pointer.getPeer(tt2));
	}
	protected native static int iauUt1tt(double ut11, double ut12, double dt, @Ptr long tt1, @Ptr long tt2);
	/**
	 * Original signature : <code>int iauUt1utc(double, double, double, double*, double*)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:284</i>
	 */
	public static int iauUt1utc(double ut11, double ut12, double dut1, Pointer<Double > utc1, Pointer<Double > utc2) {
		return iauUt1utc(ut11, ut12, dut1, Pointer.getPeer(utc1), Pointer.getPeer(utc2));
	}
	protected native static int iauUt1utc(double ut11, double ut12, double dut1, @Ptr long utc1, @Ptr long utc2);
	/**
	 * Original signature : <code>int iauUtctai(double, double, double*, double*)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:286</i>
	 */
	public static int iauUtctai(double utc1, double utc2, Pointer<Double > tai1, Pointer<Double > tai2) {
		return iauUtctai(utc1, utc2, Pointer.getPeer(tai1), Pointer.getPeer(tai2));
	}
	protected native static int iauUtctai(double utc1, double utc2, @Ptr long tai1, @Ptr long tai2);
	/**
	 * Original signature : <code>int iauUtcut1(double, double, double, double*, double*)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:288</i>
	 */
	public static int iauUtcut1(double utc1, double utc2, double dut1, Pointer<Double > ut11, Pointer<Double > ut12) {
		return iauUtcut1(utc1, utc2, dut1, Pointer.getPeer(ut11), Pointer.getPeer(ut12));
	}
	protected native static int iauUtcut1(double utc1, double utc2, double dut1, @Ptr long ut11, @Ptr long ut12);
